--- a/notes/2025-01-09-sketch.md
+++ b/notes/2025-01-09-sketch.md
@@ -1,5 +1,7 @@
 # sketch
 
+## high level plan
+
 > text, split, embed, store
 
 A query time:
@@ -10,3 +12,45 @@ try:
 
 * n8n, meili vector db
 * docling
+
+
+## data
+
+```
+$ wget -rkc --warc-file 2024-04-SOZPHIL-TEST-7-pdf-urls --warc-cdx -f 2024-04-SOZPHIL-TEST-7-pdf-urls.txt
+
+real    3m17.864s
+user    0m47.714s
+sys     0m14.845s
+```
+
+About 700MB raw data, lots of PDF; mostly "sozphil".
+
+Extracting the PDF from WARC temporarily, with warcio.
+
+```
+$ time uv run scripts/unwrap.py -d /tmp/tmp.BtyOeuTyF1 data/2024-04-SOZPHIL-TEST-7-pdf-urls.warc.gz
+
+real    0m6.060s
+user    0m5.421s
+sys     0m0.613s
+```
+
+Convert to markdown.
+
+```python
+from docling.document_converter import DocumentConverter
+
+source = "/tmp/tmp.BtyOeuTyF1/..."  # document per local path or URL
+converter = DocumentConverter()
+result = converter.convert(source)
+print(result.document.export_to_markdown())
+```
+
+Calculate embedding. Questions:
+
+* per document
+* per paragraph
+* per element (paragraph, table, image, ...)
+
+
