--- a/notes/2025-01-09-sketch.md
+++ b/notes/2025-01-09-sketch.md
@@ -53,4 +53,15 @@ Calculate embedding. Questions:
 * per paragraph
 * per element (paragraph, table, image, ...)
 
+> https://ds4sd.github.io/docling/examples/batch_convert/
+
+Ollama, nomic:
+
+```shell
+$ curl http://localhost:11434/api/embeddings -d '{
+  "model": "nomic-embed-text",
+  "prompt": "The sky is blue because of Rayleigh scattering"
+}'
+```
+
 
