--- a/notes/2025-01-14-rerun.md
+++ b/notes/2025-01-14-rerun.md
@@ -6,3 +6,7 @@ $ uv run scripts/unwrap.py -d data/files data/2024-04-SOZPHIL-TEST-7-pdf-urls.wa
 ```
 
 ![](../static/extracted-pdf-files.png)
+
+```
+$ TORCH_CUDA_ARCH_LIST=8.9 time uv run scripts/md.py --dir data/files/
+```
